src/test/deca/syntax/valid/created/sans_objet/main/emptymain.deca
// Règles attendues (occurences dans lignes du fichier résultat):
//  Program 15:0
//      ListDeclClass
//      Main 15:0
//          EmptyMain
//              
// Auteur: Jerome
//
// Historique:
//    cree le 14/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

{

}